ggtern 2.0.2
----------------------------------------------------------------
* Fixed the stat_interpolation_tern to handle the different modelling methods
* Better haldling of the 'fullrange' case within the stat_interpolation_tern method
* Added GeomDl for direct.label
* Applied label formatter to all labels (title, legend etc...), not just ternary specific labels

ggtern 2.0.1
----------------------------------------------------------------
* Fixed minor bugs in interpolation and countouring stats
* Fixed missing imports

ggtern 2.0.0
----------------------------------------------------------------
* Almost entirely re-written package, providing compatability with ggplot2 (>= 2.0.0)
* Improved axes contruction routine, cleaner & better arrangement of the ternary scales & plot area
* Implements the use of a manual clipping mask, rather than exclusion of points outside of the plot area
* Inclusion of several new gemetries
* Compatable with a larger number of base geometries from ggplot2
* Now uses a custom rendering mask, which is added by default in the foreground, however, can be placed manually as a layer via geom_mask(...)
* Standardised the naming / heirachy of the theme elements
* Added geom_Xisoprop new geometry, for plotting isoproportion lines
* Implementation of appropriate orthogonal coordinate systems for many of the geometries such as geom_density_ternand geom_interpolation_tern
* Greater control over the labelling, including expressions and TeX parsing.
* The function grid.arrange now works perfectly
* Plots can be rotated using theme_rotate(angle) method

ggtern 1.0.6.1
----------------------------------------------------------------
* Replaced the padding argument of the coord_tern constructor, with an insertion of rows and columns around the main panel in the rendering routine, with an associated theme element 'panel.margin.tern', which is distinct from and not to be confused with 'plot.margin' or 'panel.margin'